# octo-kerberos-cpp

./: CMakeLists.txt  Pipfile  README.md  conanfile.py  setup.py
bindings/octo_krb5/: __init__.pyi
cmake/: LoadConanBuildInfo.cmake
examples/: CMakeLists.txt
examples/scripts/: tgt-example.py
examples/src/: tgt-example.cpp
include/octo-kerberos-cpp/: kerberos-authenticator.hpp  kerberos-ticket.hpp  kerberos-user-credentials.hpp
include/octo-kerberos-cpp/krb5/: krb5-kerberos-authenticator.hpp  krb5-kerberos-serializer.hpp  krb5-kerberos-service-ticket.hpp  krb5-kerberos-tgt-ticket.hpp
include/octo-kerberos-cpp/krb5/python/: krb5-kerberos-py-bindings.hpp  krb5-kerberos-py-module.hpp  krb5-kerberos-py-serializer.hpp  krb5-kerberos-py-types.hpp
src/: kerberos-user-credentials.cpp
src/krb5/: krb5-kerberos-authenticator.cpp  krb5-kerberos-serializer.cpp  krb5-kerberos-service-ticket.cpp  krb5-kerberos-tgt-ticket.cpp
src/krb5/python/: krb5-kerberos-py-bindings.cpp  krb5-kerberos-py-serializer.cpp  krb5-kerberos-py-types-authenticator.cpp  krb5-kerberos-py-types-service-ticket.cpp  krb5-kerberos-py-types-tgt-ticket.cpp  krb5-kerberos-py-types-user-credentials.cpp
